--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -136,12 +136,14 @@ Event Frames
                     <th>Description</th>
                 {% elif childrenClass == "EventFrameTemplate" %}
                     <th>Description</th>
+                    <th>Source Event Frame Template</th>
                     <th></th>
                     <th></th>
                     <th></th>
                     <th></th>
                 {% elif childrenClass == "EventFrame" %}
                     <th>Element</th>
+                    <th>Source Event Frame</th>
                     <th>User</th>
                     <th id = "thStartTimestamp">Start Timestamp</th>
                     <th id = "thEndTimestamp">End Timestamp</th>
@@ -155,6 +157,7 @@ Event Frames
                 {% elif childrenClass == "DescendantEventFrameTemplate" %}
                     <th>Description</th>
                     <th>Order</th>
+                    <th>Source Event Frame Template</th>
                     <th></th>
                     <th></th>
                     <th></th>
@@ -194,6 +197,7 @@ Event Frames
                         {% elif childrenClass == "EventFrameTemplate" %}
                             <td>{{ child.Name }}</td>
                             <td>{{ child.Description }}</td>
+                            <td>{{ child.SourceEventFrameTemplate.Name }}</td>
                             {% if current_user.isAdministrator() %}
                                 <td><a class = "btn btn-default" title = "Configure" href = "{{ url_for("eventFrames.selectEventFrame",
                                     selectedClass = "EventFrameTemplate", selectedId = child.id(), selectedOperation = "configure") }}">
@@ -217,6 +221,11 @@ Event Frames
                             <td>{{ child.Name }} <a href = '{{ url_for("messages.listMessages") }}'>
                                 <span id = "spanEventFrameMessages{{ child.EventFrameId }}" class = "badge" style = "visibility: hidden"></span></td></a>
                             <td>{{ child.ElementName }}</td>
+                            {% if child.SourceEventFrameName == None %}
+                                <td></td>
+                            {% else %}
+                                <td>{{ child.SourceEventFrameName }}</td>
+                            {% endif %}
                             <td>{{ child.UserName }}</td>
                             <td>{{ moment(child.StartTimestamp).format("YYYY-MM-DD HH:mm:ss") }}</td>
                             {% if child.EndTimestamp %}
@@ -250,6 +259,7 @@ Event Frames
                             <td>{{ child.Name }}</td>
                             <td>{{ child.Description }}</td>
                             <td>{{ child.Order }}</td>
+                            <td>{{ child.SourceEventFrameTemplate.Name }}</td>
                             <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("eventFrameTemplates.editEventFrameTemplate",
                                 eventFrameTemplateId = child.id()) }}"><span class = "glyphicon glyphicon-edit"></span></a></td>
                             <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("eventFrameTemplates.deleteEventFrameTemplate",
@@ -372,11 +382,13 @@ Event Frames
                     {% elif childrenClass == "EventFrameTemplate" %}
                         null,
                         null,
+                        null,
                         { "orderable": false }, // Associate button.
                         { "orderable": false }, // Overlay button.
                         { "orderable": false }, // Edit button.
                         { "orderable": false }  // Delete button.
                     {% elif childrenClass == "EventFrame" %}
+                        null,
                         null,
                         null,
                         null,
@@ -390,6 +402,7 @@ Event Frames
                             null,
                         {% endfor %}
                     {% elif childrenClass == "DescendantEventFrameTemplate" %}
+                        null,
                         null,
                         null,
                         null,
